--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,36 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-<h1>Password Generator</h1>
+    <h1>Password Generator</h1>
+    <div class="container">
+        <form>
+            <label for="pswlength">Password Length:
+                <input type="text" id="pswlength" name="pswlength" />
+            </label>
+            <label for="include_logograms">Include Logograms:
+                <input type="checkbox" id="include_logograms" name="include_logograms" value="True">(eg. @#$%)
+            </label>
+
+            <label for="include_numbers">Include Numbers:
+                <input type="checkbox" id="include_symb" name="include_symb" value="True">(eg. 123456)
+            </label>
+
+            <label for="include_lowercase">Include Lowercase Characters:
+                <input type="checkbox" id="include_lowercase" name="include_lowercase" value="True">(eg. abcdef)
+            </label>
+
+            <label for="include_uppercase">Include Uppercase Characters:
+                <input type="checkbox" id="include_uppercase" name="include_uppercase" value="True">(eg. ABCDEF)
+            </label>
+
+            <input type="button" class="center" value="Generate Password">
+        </form>
+
+        <label for="generated_psw">Generated Password</label>
+        <input id="generated_psw" type="text" readonly>
+    </div>
 </body>
+
 </html>
