Added ID for Generate Password button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="checkbox" id="include_uppercase" name="include_uppercase" value="True">(eg. ABCDEF)
             </label>
 
-            <input type="button" class="center" value="Generate Password">
+            <input id="btn_generate_psw" type="button" class="center" value="Generate Password">
         </form>
 
         <label for="generated_psw">Generated Password</label>
