Fixed typo on include_numbers checkbox

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </label>
 
             <label for="include_numbers">Include Numbers:
-                <input type="checkbox" id="include_symb" name="include_symb" value="True">(eg. 123456)
+                <input type="checkbox" id="include_numbers" name="include_numbers" value="True">(eg. 123456)
             </label>
 
             <label for="include_lowercase">Include Lowercase Characters:
