Added progress bar for password bit strength

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 
         <label for="generated_psw">Generated Password</label>
         <input id="generated_psw" type="text" readonly>
+        <div>
+            <div class="progress-bar">
+                <div id="progress" class="progress"></div>
+            </div>
+            <div>Password Quality: </div>
+        </div>
     </div>
 </body>
 
