Added new functionality: Password strength
Added library "password-strength" to check for a generated password's bit strength. Also added visualization of a password's bit value using a progress bar. Also edited progress style to match it's background style.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Password Generator</title>
     <script src="js/input_handling.js"></script>
     <script src="js/pass_gen.js"></script>
+    <script src="js/password-strength.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
@@ -43,7 +44,7 @@
             <div class="progress-bar">
                 <div id="progress" class="progress"></div>
             </div>
-            <div>Password Quality: </div>
+            <div id="pass_quality">Password Quality: </div>
         </div>
     </div>
 </body>
