Added slidebar for password length and fixed events listeners
Added a small slidebar for easy password length input, and remove 'keydown' and 'change' events for 'input' event

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <form>
             <label for="pswlength">Password Length:
                 <input type="text" id="pswlength" name="pswlength" />
+                <input type="range" min="0" max="100" value="0" class="slider" id="pswlength_range"/>
             </label>
             <label for="include_logograms">Include Logograms:
                 <input type="checkbox" id="include_logograms" name="include_logograms" value="True">(eg. @#$%)
